Fixed error on mobile, made minor style changes
Centered project name (appears on hover), page width (.main class) was
too large after adding nav so I fixed it, turned off zooming, added
normalize.css

--- a/css/about.css
+++ b/css/about.css
@@ -56,7 +56,7 @@ body nav:hover {
     padding-right: calc(0.5em - 0.25rem); }
 
 body .main {
-  width: 100%;
+  width: calc(100% - 2.5rem);
   height: 100%;
   margin-left: 2.5rem;
   float: left; }
