--- a/scss/_vertical-navbar.scss
+++ b/scss/_vertical-navbar.scss
@@ -51,7 +51,7 @@ body {
       }
   }
   .main {
-    width: 100%;
+    width: calc(100% - 2.5rem);
     height: 100%;
     margin-left: 2.5rem;
     float: left;
